tests/baselines/reference/for-of33.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of33.ts(2,5): error TS7023: '[Symbol.iterator]' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.


==== tests/cases/conformance/es6/for-ofStatements/for-of33.ts (1 errors) ====
    class StringIterator {
        [Symbol.iterator]() {
        ~~~~~~~~~~~~~~~~~
!!! error TS7023: '[Symbol.iterator]' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            return v;
        }
    }
    
    for (var v of new StringIterator) { }